[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "numpy"
]
build-backend = "scikit_build_core.build"

[project]
name = "pypresto"
version = "0.1.0"

requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "anndata",
    "scipy",
    "statsmodels"
]

[tool.scikit-build]
cmake.version = ">=3.15"

[tool.scikit-build.wheel]
install-dir = "pypresto"
packages = ["pypresto"]

[tool.scikit-build.cmake.define]
BUILD_TESTING = "OFF"

[tool.cibuildwheel]
# skip PyPy and musllinux, only build CPython
skip = ["pp*", "*-musllinux*"]
build-verbosity = 1
before-test = "pip install --only-binary=h5py h5py"
test-command = "python -c \"import pypresto; import pypresto.matrix_module; print('Success!')\""

[tool.cibuildwheel.linux]
before-all = "yum install -y epel-release && yum install -y openblas-devel pkgconfig libgomp"

[tool.cibuildwheel.macos]
repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "13.0" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0" }